[BUGFIX] Fix "No results" positioning in Live Search
The "No results found" alert is rendered in a flex-row container, which
caused a rendering bug where the alert box was stretched to a height of
100%, but its width is limited to its content. Use flex children
modifiers to ensure correct positioning.

Resolves: #103662
Releases: main, 12.4
Reviewed-on: https://review.typo3.org/c/Packages/TYPO3.CMS/+/83972
Tested-by: Andreas Kienast <a.fernandez@scripting-base.de>
Tested-by: core-ci <typo3@b13.com>

--- a/typo3/sysext/backend/Resources/Public/Css/backend.css
+++ b/typo3/sysext/backend/Resources/Public/Css/backend.css
@@ -3751,6 +3751,7 @@ typo3-backend-live-search typo3-backend-live-search-result-pagination .paginatio
 typo3-backend-live-search-result-item-container,typo3-backend-live-search-result-item-detail-container{position:relative;flex-grow:1;flex-basis:50%;overflow:auto;padding:var(--bs-modal-padding)}
 typo3-backend-live-search-result-item-container{padding-top:0}
 typo3-backend-live-search-result-container{--livesearch-item-opacity:.5;--livesearch-preamble-delimiter-border-width:1px;--livesearch-preamble-delimiter-border-color:rgb(215, 215, 215);display:flex;flex-direction:row;margin:calc(var(--bs-modal-padding) * -1);height:100%;overflow:auto}
+typo3-backend-live-search-result-container>.alert{flex:1 1 auto;align-self:flex-start;margin:var(--bs-modal-padding)}
 typo3-backend-live-search-result-action-list,typo3-backend-live-search-result-list{display:flex;flex-direction:column;gap:1px}
 typo3-backend-live-search-result-list .livesearch-result-item-group-label{font-weight:700;line-height:inherit;padding:var(--typo3-list-item-padding-y) 0;border-bottom:1px solid rgba(0,0,0,.1);margin-bottom:var(--typo3-list-item-padding-y);background-color:#fff;z-index:20}
 typo3-backend-live-search-result-list .livesearch-result-item-group-label.sticky{position:sticky;top:0;z-index:15}
